<resources>
    <string name="app_name">UAS</string>
    <string name="url_server">http://52.89.227.55/api/</string>
    <string name="tag_authenticate">authenticate</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="etUsername">Usuario</string>
    <string name="etPassword">Contraseña</string>
    <string name="btIngresar">INGRESAR</string>
    <string name="ivLogo_description">Logo</string>
    <string name="tvNivel">Nivel: </string>
    <string name="tvIpTitle">Titulo:</string>
    <string name="tvIpType">Tipo de Plan de Mejora:</string>
    <string name="tvIpFound">Hallazgo:</string>
    <string name="tvIpCause">Análisis Causal:</string>
    <string name="tvIpResp">Responsable:</string>
    <string name="tvIpDate">Fecha de Implementación:</string>
    <string name="tvIpStatus">Estado:</string>
    <string name="btnActions">Ver actividades planteadas</string>
    <string name="btnIpFile">Descargar archivo asociado</string>
    <string name="btnIpSug">Sugerencias al Plan</string>

    <!--Investigacion-->
    <string name="invModule">Módulo de Investigación</string>
    <string name="investigator">Investigadores</string>
    <string name="invGroup">Grupos de Investigación</string>
    <string name="projects">Proyectos</string>
    <string name="invBack">Volver</string>
    <string name="invLogOut">Cerrar Sesión</string>
    <string name="invGroupEsp">Especialidad:</string>
    <string name="invGroupDesc">Descripcion:</string>
    <string name="invMail">Correo:</string>
    <string name="invEsp">Especialidad:</string>
    <string name="invTel">Telefono:</string>
    <string name="projInitDate">Fecha Inicial:</string>
    <string name="projFinDate">Fecha Final:</string>
    <string name="projDeliv">Cant. Entregables:</string>
    <string name="projMembers">Integrantes:</string>
    <!--Inv Fin-->

    <!--PSP-->
    <string name="pspCycle">Ciclo</string>
    <string name="pspTutors">Supervisores</string>
    <string name="pspStudents">Alumnos</string>
    <string name="pspDates">Reuniones</string>
    <string name="pspDocumentsProfesor">DocumentosProfesor</string>
    <string name="pspDocuments">Documentos alumno</string>
    <string name="pspExit">Cerrar Sesión</string>
    <string name="pspSpeciality">Especialidad</string>
    <string name="pspCycleDescription">Descripción</string>
    <string name="pspTotalTutors">Total de supervisores</string>
    <string name="pspTotalAlumnos">Total de alumnos</string>
    <string name="pspSelectButtonInforme">Informacion de empresa</string>
    <string name="pspSelectButtonDocument">Documento</string>
    <string-array name="MeetingStatus">
        <item>--Seleccionar--</item>
        <item>Cancelada</item>
        <item>Pendiente</item>
        <item>Realizada</item>
    </string-array>
    <!--PSP Fin-->

    <!--Tutoria-->
    <string-array name="hora">
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
    </string-array>

    <string name="noCita">Registrar\n
    sin cita</string>
    <string name="Cita">Atender\n
    nueva cita</string>
    <string name="Solicitud">Solicitud\n
    nueva cita</string>
    <string name="Filtrar">Filtrar\n
    citas</string>
    <!--Tutoria Fin-->

    <string name="btModuleAcr">Acreditacion</string>
    <string name="btModuleTutEv">Tutoría y Evaluacion</string>
    <string name="btModulePsp">PSP</string>
    <string name="btModuleInv">Investigacion</string>
    <string name="tvCourse">Curso:</string>
    <string name="tvSpecialty">Especialidad:</string>
    <string name="tvProfessor">Profesor:</string>
    <string name="tvDescription">Descripcion:</string>
    <string name="tvSpecialtyLabel">Especialidad: </string>
    <string name="tvSpecialtyCode">Codigo: </string>
    <string name="tvSpecialtyCoord">Coordinador: </string>
    <string name="tvSpecialtyDesc">Descripcion: </string>
    <string name="tvMeasureResStartSemester">Ciclo de Inicio: </string>
    <string name="tvMeasureResEndSemester">Ciclo de Fin: </string>
    <string name="tvMeasureCritLevel">Nivel de criterio: </string>
    <string name="tvMeasureAccLevel">Nivel de aceptacion: </string>
    <string name="tvMeasureAccPerc">Porc. de Aceptacion: </string>
    <string name="btObjEdu">Objetivos Educacionales</string>
    <string name="btSemPer">Semestres Del Periodo</string>
    <string name="btMeaInst">Instrumentos De Medición</string>
    <string name="title_activity_navigation_drawer_investigacion">NavigationDrawerInvestigacion
    </string>
    <string name="title_activity_navigation_drawer_acreditacion">NavigationDrawerAcreditacion
    </string>
    <string name="title_activity_navigation_drawer_tutoria">Tutoría
    </string>
    <string name="ivLogoAcr_description">Logo del modulo</string>
    <string name="itdAcrSpecialty">Mi Especialidad</string>
    <string name="itdAcrMyself">Mi Perfil</string>
    <string name="itdAcrCourse">Cursos</string>
    <string name="itdAcrEducationalObj">Objetivo Educacional</string>
    <string name="itdAcrSizeablePeriod">Periodos de Medición</string>
    <string name="itdAcrStudentResult">Resultados Estudiantiles</string>
    <string name="itdAcrCriteria">Criterios</string>
    <string name="itdAcrUpgradePlan">Plan de Mejora</string>
    <string name="itdAcrEffortTable">Tabla de Desempeño</string>
    <string name="itdAcrSizeResult">Resultados de Medición</string>
    <string name="itdAcrConsolidate">Consolidados</string>
    <string name="itdAcrSignOut">Cerrar Sesión</string>
    <string name="tvAcrName">Nombre:</string>
    <string name="tvAcrSurnames">Apellidos:</string>
    <string name="tvAcreEmail">Correo:</string>
    <string name="tvErrorLogin">Usuario o contraseña incorrectos</string>
    <string name="tvCicle">Ciclo:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itdAcrSpecialtyList">Especialidades</string>
    <string name="tvHorario">Horario:</string>
    <string name="tvProfessorUnavailable">El curso no cuenta con profesores asociados</string>
    <string name="title_activity_navigation_drawer_tutoria_tutor">NavigationDrawerTutoriaTutor
    </string>
    <string name="pspGroup">Seleccionar grupo</string>
    <string name="tvNivelAcademico">Nivel Académico:</string>
    <string name="tvNoSchedules">El curso no cuenta con horarios activos en este ciclo.</string>
    <string name="btHorario">HORARIO</string>
    <string name="tvNumber">Numero:</string>
    <string name="btResultadoEstudiantil">RESULTADOS ESTUDIANTILES</string>
    <string name="tvIdentificador">Identificador:</string>
    <string name="tvAspecto">ASPECTOS</string>
    <string name="nav_evaluaciones">Evaluaciones</string>
    <string name="btArchAction">Archivo</string>
    <string name="evName">Nombre:</string>
    <string name="tvWho">Por:</string>
    <string name="tvWhen">El:</string>
    <string name="tvTitle">Titulo:</string>
    <string name="tvEdit">Última modificación:</string>
    <string name="action_suggerence">Nueva</string>
    <string name="tvSuggerence">Sugerencia:</string>
    <string name="hintTitle">Titulo</string>
    <string name="btSave">GUARDAR</string>
    <string name="tvSeeRes">Presionar un criterio para observar sus resultados asociados</string>
    <string name="tvSeeAspects">Presionar un resultado para observar sus aspectos asociados</string>
    <string name="tvSeeCrits">Presionar un aspecto para ver sus criterios asociados.</string>
    <string name="tvSeeCLevs">Presionar un criterio para ver sus niveles asociados.</string>
    <string name="itdMyCourses">Mis Cursos</string>
    <string name="estado">Estado:</string>
    <string name="titulo">Estado          Nombre         Vigencia</string>
    <string name="tEstado">Estado</string>
    <string name="tNombre">Nombre</string>
    <string name="tVigencia">Vigencia</string>
    <string name="tvNoCourses">No cuenta con cursos este ciclo.</string>
    <string name="newSugerence">Nueva Sugerencia</string>
    <string name="itdModule">Cambiar de Módulo</string>
    <string name="tvInactivo">INACTIVO</string>
    <string name="tvActivo">ACTIVO</string>
    <string name="everyone">Por: Todos</string>
    <string name="no_comment">Sin comentarios</string>
    <string name="connection_error">Error de conexión</string>
    <string name="no_student">El curso no cuenta con alumnos.</string>
    <string name="btContribution">Aporte del curso</string>
    <string name="title_activity_navigation_drawer_tutoria_coord">NavigationDrawerTutoriaCoord</string>
    <string name="results">Presione en un alumno para visualizar los resultados de desempeño del alumno.</string>
    <string name="no_criterio">El alumno aun no ha sido evaluado</string>
    <string name="no_curses">El semestre no cuenta con cursos activos este ciclo.</string>
    <string name="btEvidence">EVIDENCIA DEL HORARIO</string>
    <string name="no_evidence">El curso no cuenta con evidencias registradas.</string>
    <string name="citas">Citas</string>
    <string name="nombre_evaluacion">Nombre Evaluación</string>
    <string name="tvFechaInicio">Fecha de Inicio:</string>
    <string name="tvFechaFin">Fecha Fin:</string>
    <string name="tvTime">Tiempo:</string>
    <string name="no_criterio_level">El criterio no cuenta con niveles.</string>
    <string name="no_file">El Plan de Mejora no cuenta con un archivo asociado.</string>
    <string name="ok">OK</string>
    <string name="no_ok">no OK</string>
    <string name="info">info</string>
    <string name="no_results">El curso no cuenta con aportes.</string>
    <string name="todos">Todos</string>
    <string name="no_suggestion">El plan de mejora no cuenta con sugerencias registradas.</string>
    <string name="buscar">BUSCAR</string>
    <string name="no_vigente">NO VIGENTE</string>
    <string name="vigente">VIGENTE</string>
</resources>
