<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uas_plomo_fondo"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="150dp"
    tools:context="uas.pe.edu.pucp.newuas.view.MainActivity">


    <Button
        android:text="@string/btModuleAcr"
        android:id="@+id/btModuleAcr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/btModulePsp"
        android:id="@+id/btModulePsp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/btModuleTutEv"
        android:id="@+id/btModuleTutEv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/btModuleInv"
        android:id="@+id/btModuleInv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>