<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_psp_groupsss"
        android:checkableBehavior="single"
        android:visible="true">

        <item
            android:id="@+id/nav_item_pspStudents_Supervis"
            android:icon="@drawable/ic_resultados_eval"
            android:title="Estudiantes"
            />

        <item
            android:id="@+id/nav_item_pspCycle"
            android:icon="@drawable/ic_resultados_eval"
            android:title="@string/pspCycle"
            />
        <item
            android:id="@+id/nav_item_pspTutors"
            android:icon="@drawable/ic_objetivos_ed"
            android:title="@string/pspTutors" />
        <item
            android:id="@+id/nav_item_pspStudents"
            android:icon="@drawable/ic_objetivos_ed"
            android:title="@string/pspStudents" />

        <item
            android:id="@+id/nav_item_pspDates_supervisor"
            android:icon="@drawable/ic_mejora_cont"
            android:title="Administrar Citas" />

        <item
            android:id="@+id/nav_item_pspDates_supervisor_employer_student"
            android:icon="@drawable/ic_mejora_cont"
            android:title="Citas Jefe" />

        <item
            android:id="@+id/nav_item_pspDocuments_teacher"
            android:icon="@drawable/ic_cursos"
            android:title="Supervisar documentos" />

        <item
            android:id="@+id/nav_item_pspGroup_student"
            android:icon="@drawable/ic_mejora_cont"
            android:title="@string/pspGroup" />

        <item
            android:id="@+id/nav_item_pspPhases"
            android:icon="@drawable/ic_objetivos_ed"
            android:title="Fases" />
        <item
            android:id="@+id/nav_item_pspGrades"
            android:icon="@drawable/ic_objetivos_ed"
            android:title="Ver notas" />
        <item
            android:id="@+id/nav_items_pspSupxStudenMeeting"
            android:icon="@drawable/ic_calendar"
            android:title="Reuniones" />

        <item
            android:id="@+id/nav_pspExit"
            android:icon="@drawable/ic_logout"
            android:title="@string/pspExit" />

    </group>




</menu>
