<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/fragment_top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tvIpTitle" />

        <TextView
            android:id="@+id/tvIpTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/half_divider"
            android:layout_marginStart="@dimen/half_divider"
            android:layout_weight="0.7"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tvIpType" />

        <TextView
            android:id="@+id/tvIpType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/half_divider"
            android:layout_marginStart="@dimen/half_divider"
            android:layout_weight="0.7"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tvIpFound" />

        <TextView
            android:id="@+id/tvIpFound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/half_divider"
            android:layout_marginStart="@dimen/half_divider"
            android:layout_weight="0.7"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tvIpCause" />

        <TextView
            android:id="@+id/tvIpCause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/half_divider"
            android:layout_marginStart="@dimen/half_divider"
            android:layout_weight="0.7"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tvIpResp" />

        <TextView
            android:id="@+id/tvIpResp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/half_divider"
            android:layout_marginStart="@dimen/half_divider"
            android:layout_weight="0.7"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tvIpDate" />

        <TextView
            android:id="@+id/tvIpDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/half_divider"
            android:layout_marginStart="@dimen/half_divider"
            android:layout_weight="0.7"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/tvIpStatus" />

        <TextView
            android:id="@+id/tvIpStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/half_divider"
            android:layout_marginStart="@dimen/half_divider"
            android:layout_weight="0.7"
            android:text="" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvNoFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_file"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnDownloadFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/left_right_padding"
        android:layout_marginStart="@dimen/left_right_padding"
        android:layout_marginTop="@dimen/divider"
        android:background="@drawable/bg_button_login_selector"
        android:text="@string/btnIpFile"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/left_right_padding"
        android:layout_marginStart="@dimen/left_right_padding"
        android:layout_marginTop="@dimen/divider"
        android:background="@drawable/bg_button_login_selector"
        android:text="@string/btnActions"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnSug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/left_right_padding"
        android:layout_marginStart="@dimen/left_right_padding"
        android:layout_marginTop="@dimen/divider"
        android:background="@drawable/bg_button_login_selector"
        android:text="@string/btnIpSug"
        android:textColor="@color/white" />


</LinearLayout>